force-app/main/default/objects/Supplier_Product__c/Supplier_Product__c.object-meta.xml
<CustomObject>
    <description>Supplier-owned product listing draft. Partners create and edit this record in Experience Cloud. Approved listings are published to Product2 and Commerce entitlements by FSG merchandisers.</description>
    <label>Supplier Product</label>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>