force-app/main/default/objects/Supplier_Product__c/fields/Certification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Certification_Notes__c</fullName>
    <label>Certification Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>