force-app/main/default/objects/Supplier_Product__c/fields/Onboarding_Case__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OOTB Case used for queue assignment and merchandiser review of this listing.</description>
    <label>Onboarding Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>Supplier_Products</relationshipName>
    <type>Lookup</type>
</CustomField>