force-app/main/default/objects/Supplier_Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Produce</fullName>
                <default>true</default>
                <label>Produce</label>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Artisan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>