force-app/main/default/objects/Supplier_Product__c/fields/Published_Product__c.field-meta.xml
<CustomField>
    <fullName>Published_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product2 created or linked when this listing is approved and published to the Commerce catalog.</description>
    <label>Published Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Supplier Listings</relationshipLabel>
    <relationshipName>Supplier_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>