force-app/main/default/objects/Supplier_Product__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>Supplier_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>