force-app/main/default/objects/Supplier_Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <label>Supplier SKU</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>