force-app/main/default/objects/Supplier_Product__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Farm or artisan producer that owns this listing. Sharing sets match this field to the logged-in user's Account.</description>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>Supplier_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>