force-app/main/default/objects/Supplier_Product__c/fields/Supplier_SKU_Key__c.field-meta.xml
<CustomField>
    <fullName>Supplier_SKU_Key__c</fullName>
    <description>Composite unique key SupplierAccountId-SKU so two farms can reuse the same local SKU.</description>
    <externalId>true</externalId>
    <label>Supplier SKU Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>