force-app/main/default/objects/Supplier_Product__c/listViews/Awaiting_Review.listView-meta.xml
<ListView>
    <fullName>Awaiting_Review</fullName>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Supplier_Account__c</columns>
    <columns>Region__c</columns>
    <columns>Region_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Onboarding_Case__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,In Review</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Awaiting Review</label>
</ListView>