force-app/main/default/objects/Supplier_Product__c/listViews/My_Submitted_Listings.listView-meta.xml
<ListView>
    <fullName>My_Submitted_Listings</fullName>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Region__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Price__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted,In Review</value>
    </filters>
    <filterScope>Mine</filterScope>
    <label>My Submitted Listings</label>
</ListView>